# GeometricTools

./: .gitignore  .gitmodules  ACTUAL_STATUS.md  ALGORITHM_VERIFICATION.md  BRLCAD_GEOGRAM_USAGE.md  CO3NE_MANIFOLD_ANALYSIS.md  CO3NE_POISSON_ANALYSIS.md  CO3NE_POISSON_STATUS.md  CO3NE_VOLUME_INVESTIGATION.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONSOLIDATION_PLAN.md  CPP17_THREADING_IMPLEMENTATION.md  ENHANCED_MANIFOLD_STATUS.md  ENHANCED_MANIFOLD_TEST_RESULTS.md  EULER_CHARACTERISTIC_FIX.md  EVALUATION_COMPLETE.md  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_PARITY.md  FINAL_RECOMMENDATION.md  FINAL_REPORT.md  FINAL_SUMMARY.md  FINAL_VERIFICATION_SUMMARY.md  FULL_IMPLEMENTATION_STATUS.md  GEOGRAM_COMPLETION_STATUS.md  GEOGRAM_FULL_PORT_ANALYSIS.md  GEOGRAM_PARITY_STATUS.md  GOALS.md  GTE_MESH_PROCESSING_README.md  HYBRID_FIX_FINAL.md  HYBRID_FIX_STATUS.md  IMPLEMENTATION_GAPS.md  IMPLEMENTATION_STATUS.md  INTEGRATION_COMPLETE.md  INVESTIGATION_SUMMARY.md  MANIFOLD_CLOSURE_PLAN.md  MANIFOLD_CLOSURE_SUMMARY.md  METHOD_COMPARISON.md  MIGRATION_PLAN.md  Makefile  PHASE1_COMPLETE.md  (+65 more)
tests/: CMakeLists.txt  test_anisotropic_end_to_end.cpp  test_anisotropic_remesh.cpp  test_ball_pivot.cpp  test_ball_pivot_hole_filler.cpp  test_ball_pivot_integration.cpp  test_bridging_comparison.cpp  test_closure_diagnostic.cpp  test_co3ne.cpp  test_co3ne_debug.cpp  test_co3ne_manifold_constrained.cpp  test_co3ne_profile_full.cpp  test_co3ne_rvd.cpp  test_co3ne_simple.cpp  test_co3ne_stitcher.cpp  test_comprehensive_manifold_analysis.cpp  test_debug.cpp  test_debug_50points.cpp  test_remesh.cpp  (+20 more)
(+125 files in other folders)
